게시물 리스팅도 서비스 로직 통해 처리

--- a/.env.default
+++ b/.env.default
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_SUPABASE_URL="NEED_TO_INPUT"
 NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY="NEED_TO_INPUT"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="NEED_TO_INPUT"
